# github-webhook-server

./: .coderabbit.yaml  .dockerignore  .example_env  .flake8  .github-webhook-server.config  .gitignore  .markdownlint.yaml  .pr_agent.toml  .pre-commit-config.yaml  .release-it.json  AGENTS.md  CLAUDE.md  Dockerfile  LOG_ROTATION_FIX.md  OWNERS  README.md  TEST_PR.md  alembic.ini  docker-compose-example.yaml  docker-compose.yaml  entrypoint.py  entrypoint.sh  eslint.config.js  example.config.yaml  gunicorn.conf.py  package.json  pyproject.toml  pytest.ini  renovate.json  sonar-project.properties  sweep.yaml  tox.ini  tox.toml
.github/: in-solidarity.yml
docs/: PODMAN_TROUBLESHOOTING.md  ai-features-and-test-oracle.html  ai-features-and-test-oracle.md  ai-features-quickstart.md  architecture-and-event-flow.html  architecture-and-event-flow.md  configuration-model.html  configuration-model.md  configuration-reference.html  configuration-reference.md  container-and-pypi-workflows.html  container-and-pypi-workflows.md  docker-deployment.html  docker-deployment.md  index.html  installation.html  installation.md  introduction.html  introduction.md  issue-comment-commands.html  issue-comment-commands.md  labels-check-runs-and-mergeability.html  labels-check-runs-and-mergeability.md  llms-full.txt  llms.txt  log-viewer-api.html  log-viewer-api.md  log-viewer-guide.html  log-viewer-guide.md  logging-and-data-files.html  logging-and-data-files.md  mcp-api.html  mcp-api.md  owners-and-reviewer-assignment.html  owners-and-reviewer-assignment.md  pull-request-automation.html  pull-request-automation.md  quick-start.html  quick-start.md  repository-bootstrap-and-github-app.html  (+14 more)
docs/assets/: github.js  style.css  theme.js
examples/: .github-webhook-server.yaml  config.yaml  docker-compose.yaml
github-webhook-server-container/: Dockerfile  app.py  entrypoint.sh  github_api.py  requirements.txt  webhook.py
scripts/: debugger.py  generate_changelog.py  get_pr_commands_from_log.sh  podman-cleanup.sh
sidecar-helper/: package-lock.json  package.json  tsconfig.json
sidecar-helper/src/: server.ts
webhook-server-container/: Dockerfile  app.py  constants.py  entrypoint.sh  github_api.py  gitlab_api.py  requirements.txt  webhook.py
webhook_server/: app.py
webhook_server/config/: schema.yaml
webhook_server/docs/: pr-flow-api.md
webhook_server/libs/: ai_cli.py  ai_review.py  check_run_handler.py  config.py  database.py  exceptions.py  github_api.py  issue_comment_handler.py  labels_handler.py  log_parser.py  log_viewer.py  metrics_tracker.py  models.py  owners_files_handler.py  pull_request_handler.py  pull_request_review_handler.py  push_handler.py  runner_handler.py  test_oracle.py
webhook_server/libs/ai/: __init__.py  cost_tracker.py  gemini_client.py  log_parser.py  models.py  prompt_templates.py  rate_limiter.py  response_parser.py
webhook_server/libs/graphql/: graphql_builders.py  graphql_client.py  graphql_optimizations.py  graphql_wrappers.py  unified_api.py  webhook_data.py
webhook_server/libs/handlers/: __init__.py  check_run_handler.py  issue_comment_handler.py  labels_handler.py  owners_files_handler.py  pull_request_handler.py  pull_request_review_handler.py  push_handler.py  runner_handler.py
webhook_server/migrations/: README.md  env.py  script.py.mako
webhook_server/migrations/versions/: 20251123_2009_c02ee003e3ea_allow_null_webhook_action.py
webhook_server/tests/: conftest.py  test_add_reviewer_action.py  test_ai_cli.py  test_ai_models.py  test_ai_response_parser.py  test_ai_review.py  test_api_call_counting.py  test_app.py  test_app_utils.py  test_branch_protection.py  test_check_run_handler.py  test_clean_rebase_detection.py  test_command_security.py  test_comment_utils.py  test_config.py  test_config_schema.py  test_container_utils.py  test_context.py  test_custom_check_runs.py  test_database.py  test_edge_cases_validation.py  test_exceptions.py  test_frontend_performance.py  test_git_tools.py  test_github_api.py  test_github_api_coverage.py  test_github_api_metrics.py  test_github_repository_and_webhook_settings.py  test_github_repository_settings.py  test_github_retry.py  test_graphql_builders.py  test_graphql_client.py  test_graphql_client_async.py  test_graphql_client_errors.py  test_graphql_error_handling.py  test_graphql_optimizations.py  test_graphql_wrappers.py  test_helpers.py  test_helpers_sanitization.py  test_issue_comment_handler.py  (+38 more)
webhook_server/tests/e2e/: README.md  __init__.py  conftest.py  helpers.py  server_utils.py  test_pull_request_flow.py
webhook_server/tests/manifests/: config.yaml
webhook_server/utils/: app_utils.py  command_security.py  comment_utils.py  constants.py  container_utils.py  context.py  github_repository_and_webhook_settings.py  github_repository_settings.py  github_retry.py  helpers.py  json_log_handler.py  notification_utils.py  safe_rotating_handler.py  structured_logger.py  webhook.py
webhook_server/web/: git_tools.py  log_viewer.py  metrics_dashboard.py  tool_server.py
webhook_server/web/static/css/: log_viewer.css  (+1 more)
webhook_server/web/templates/: log_viewer.html  metrics_dashboard.html
webhook_server_container/: OWNERS  app.py  constants.py  github_api.py  github_repository_settings.py  utils.py  webhook.py
webhook_server_container/config/: schema.yaml
webhook_server_container/libs/: check_runs.py  config.py  github_api.py  jira_api.py  label.py  labels.py  logs.py  pull_request.py  repositories.py  repositories_config.py  sonar_qube.py  webhook_server.py
webhook_server_container/tests/: conftest.py  test_add_reviewer_action.py  test_branch_protection.py  test_github_api.py  test_prepare_retest_wellcome_comment.py  test_prepare_retest_wellcome_msg.py  test_pull_request_owners.py  test_pull_request_size.py  test_repo_data_from_config.py
webhook_server_container/tests/manifests/: config.yaml  log-colors.json
webhook_server_container/utils/: constants.py  dockerhub_rate_limit.py  github_repository_and_webhook_settings.py  github_repository_settings.py  helpers.py  sonar_qube.py  webhook.py
(+5 files in other folders)
