[tool.ruff]
preview = true
line-length = 120
fix = true
output-format = "grouped"

[tool.ruff.format]
exclude = [".git", ".venv", ".mypy_cache", ".tox", "__pycache__"]

[tool.poetry]
name = "github-webhook-server"
version = "0.0.0"
description = "A webhook server to manage Github reposotories and pull requests."
authors = ["Meni Yakove <myakove@gmail.com>", "Ruth Netser <ruth.netser@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/myakove/github-webhook-server"
repository = "https://github.com/myakove/github-webhook-server"
packages = [{include = "webhook_server_container"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]


[tool.poetry.urls]
Download = "https://quay.io/repository/myakove/github-webhook-server"
"Bug Tracker" = "https://github.com/myakove/github-webhook-server/issues"

[tool.poetry.dependencies]
python = "^3.8"
poetry-dynamic-versioning = {extras = ["plugin"], version = "^1.0.0"}
pygithub = "^2.0.0"
flask = "^3.0.0"
pyyaml = "^6.0"
build = "^1.0.0"
shortuuid = "^1.0.11"
colorlog = "^6.7.0"
colorama = "^0.4.6"
ruff = "^0.3.0"
timeout-sampler = "^0.0.18"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"
ipython = "*"

[tool.poetry-dynamic-versioning]
enable = true
pattern = "((?P<epoch>\\d+)!)?(?P<base>\\d+(\\.\\d+)*)"

[tool.poetry-dynamic-versioning.substitution]
files = ["VERSION"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
